--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
       font-family: Arial, sans-serif;
       padding: 20px;
     }
+    form {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
     input[type="text"] {
-      width: 80%;
+      flex: 1;
       padding: 10px;
       font-size: 16px;
     }
     button {
       padding: 10px 20px;
       font-size: 16px;
-      margin-left: 10px;
     }
     iframe {
       width: 100%;
@@ -30,16 +34,41 @@
 <body>
 
   <h2>Test URL in Iframe</h2>
-  <input type="text" id="urlInput" placeholder="Enter a URL (e.g., https://example.com)">
-  <button onclick="loadIframe()">Open in Iframe</button>
+
+  <form id="urlForm">
+    <input type="text" id="urlInput" placeholder="Enter a URL (e.g., https://example.com)" required>
+    <button type="submit">Open</button>
+  </form>
 
   <iframe id="previewFrame" src=""></iframe>
 
   <script>
-    function loadIframe() {
-      const url = document.getElementById("urlInput").value;
-      document.getElementById("previewFrame").src = url;
-    }
+    const form = document.getElementById("urlForm");
+    const input = document.getElementById("urlInput");
+    const iframe = document.getElementById("previewFrame");
+
+    form.addEventListener("submit", function (e) {
+      e.preventDefault(); // Prevent form from reloading page
+      let url = input.value.trim();
+
+      // Add https:// if not present
+      if (!/^https?:\/\//i.test(url)) {
+        url = "https://" + url;
+      }
+
+      iframe.src = url;
+    });
+
+    // Optional: Prevent target="_blank" from opening a new tab inside iframe content
+    iframe.onload = function () {
+      try {
+        const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+        const links = iframeDoc.querySelectorAll('a[target="_blank"]');
+        links.forEach(link => link.setAttribute("target", "_self"));
+      } catch (err) {
+        // Cross-origin iframe: we cannot access contents
+      }
+    };
   </script>
 
 </body>
