--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>URL to Iframe Tester</title>
+  <title>URL in Iframe Tester</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -48,10 +48,10 @@
     const iframe = document.getElementById("previewFrame");
 
     form.addEventListener("submit", function (e) {
-      e.preventDefault(); // Prevent form from reloading page
+      e.preventDefault();
       let url = input.value.trim();
 
-      // Add https:// if not present
+      // Ensure protocol
       if (!/^https?:\/\//i.test(url)) {
         url = "https://" + url;
       }
@@ -59,16 +59,36 @@
       iframe.src = url;
     });
 
-    // Optional: Prevent target="_blank" from opening a new tab inside iframe content
-    iframe.onload = function () {
+    iframe.addEventListener("load", () => {
       try {
         const iframeDoc = iframe.contentDocument || iframe.contentWindow.document;
+
+        // Change all links to target="_self"
         const links = iframeDoc.querySelectorAll('a[target="_blank"]');
-        links.forEach(link => link.setAttribute("target", "_self"));
+        links.forEach(link => {
+          link.setAttribute("target", "_self");
+        });
+
+        // Optionally also prevent window.open from being used inside iframe
+        iframe.contentWindow.open = function(url, name, features) {
+          window.location.href = url; // You can change this to iframe.src = url; if you want it forced back into iframe
+        };
+
+        // Also force button clicks that try to open new windows
+        const buttons = iframeDoc.querySelectorAll('button');
+        buttons.forEach(btn => {
+          btn.addEventListener('click', () => {
+            const targetAttr = btn.getAttribute('target');
+            if (targetAttr === '_blank') {
+              btn.setAttribute('target', '_self');
+            }
+          });
+        });
+
       } catch (err) {
-        // Cross-origin iframe: we cannot access contents
+        console.warn('⚠ Cross-origin access blocked. Cannot override _blank links.');
       }
-    };
+    });
   </script>
 
 </body>
